--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "express": "^4.16.4",
     "hbs": "~4.0.4",
     "http-errors": "^1.6.3",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "mysql2": "^2.1.0",
+    "sequelize": "^6.3.0",
+    "sequelize-cli": "^6.1.0"
   }
 }
