--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "method-override": "^3.0.0",
     "morgan": "^1.9.1",
     "mysql2": "^2.1.0",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "pg": "^8.2.1",
     "sequelize": "^6.3.0",
     "sequelize-cli": "^6.1.0"
