--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.5",
     "debug": "~2.6.9",
     "express": "^4.16.4",
+    "express-handlebars": "^5.0.0",
     "express-session": "^1.17.1",
     "hbs": "~4.0.4",
     "http-errors": "^1.6.3",
